--- a/Twitter/Storyboards/Login.storyboard
+++ b/Twitter/Storyboards/Login.storyboard
@@ -19,38 +19,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in to Twitter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SSF-NN-maK">
-                                <rect key="frame" x="16" y="96" width="140" height="21"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <rect key="frame" x="16" y="88" width="165.5" height="26.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone, email or username" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4yf-Zg-nMD">
-                                <rect key="frame" x="16" y="149" width="343" height="40"/>
+                                <rect key="frame" x="16" y="138.5" width="343" height="36"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="uez-JZ-d6T"/>
+                                    <constraint firstAttribute="height" constant="36" id="uez-JZ-d6T"/>
                                 </constraints>
-                                <color key="textColor" red="0.33333333329999998" green="0.67843137249999996" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.67450980390000004" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vdz-Fo-VRa">
-                                <rect key="frame" x="16" y="189" width="359" height="0.5"/>
+                                <rect key="frame" x="16" y="174.5" width="359" height="0.5"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="EcS-vI-xnx"/>
                                 </constraints>
                             </view>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VlO-W1-nYM">
-                                <rect key="frame" x="16" y="205" width="343" height="40"/>
+                                <rect key="frame" x="16" y="190.5" width="343" height="36"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="H0g-lI-Hbo"/>
+                                    <constraint firstAttribute="height" constant="36" id="H0g-lI-Hbo"/>
                                 </constraints>
-                                <color key="textColor" red="0.33333333329999998" green="0.67843137249999996" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.67450980390000004" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="password"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ikr-hV-Ini">
-                                <rect key="frame" x="16" y="245" width="359" height="0.5"/>
+                                <rect key="frame" x="16" y="226.5" width="359" height="0.5"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="VKJ-nj-qfv"/>
@@ -60,10 +60,10 @@
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VXx-W3-X1L">
-                                        <rect key="frame" x="16" y="7" width="126" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                        <rect key="frame" x="16" y="7.5" width="116" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <state key="normal" title="Forgot password?">
-                                            <color key="titleColor" red="0.33333333329999998" green="0.67843137249999996" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="titleColor" red="0.0" green="0.67450980392156867" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="45A-Rz-5b7">
@@ -75,12 +75,12 @@
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RkC-PB-kCx">
                                         <rect key="frame" x="295" y="6" width="64" height="32"/>
-                                        <color key="backgroundColor" red="0.33333333329999998" green="0.67843137249999996" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.0" green="0.67450980390000004" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="64" id="03q-D2-Gbg"/>
                                             <constraint firstAttribute="height" constant="32" id="5cf-Tw-pPl"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                         <state key="normal" title="Log in">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -118,21 +118,16 @@
                             <constraint firstItem="Mlk-oA-q3O" firstAttribute="trailing" secondItem="4yf-Zg-nMD" secondAttribute="trailing" constant="16" id="Okp-mG-vAL"/>
                             <constraint firstItem="Mlk-oA-q3O" firstAttribute="trailing" secondItem="VlO-W1-nYM" secondAttribute="trailing" constant="16" id="XIF-bm-Yh9"/>
                             <constraint firstAttribute="trailing" secondItem="vdz-Fo-VRa" secondAttribute="trailing" id="XqA-ot-fcX"/>
-                            <constraint firstItem="4yf-Zg-nMD" firstAttribute="top" secondItem="SSF-NN-maK" secondAttribute="bottom" constant="32" id="erD-tI-lUe"/>
+                            <constraint firstItem="4yf-Zg-nMD" firstAttribute="top" secondItem="SSF-NN-maK" secondAttribute="bottom" constant="24" id="erD-tI-lUe"/>
                             <constraint firstItem="Mlk-oA-q3O" firstAttribute="trailing" secondItem="WBN-OT-ION" secondAttribute="trailing" id="mN8-Kf-1i3"/>
                             <constraint firstItem="Mlk-oA-q3O" firstAttribute="bottom" secondItem="WBN-OT-ION" secondAttribute="bottom" id="my9-eX-Oc3"/>
                             <constraint firstItem="Ikr-hV-Ini" firstAttribute="top" secondItem="VlO-W1-nYM" secondAttribute="bottom" id="px6-70-yXu"/>
-                            <constraint firstItem="SSF-NN-maK" firstAttribute="top" secondItem="Mlk-oA-q3O" secondAttribute="top" constant="32" id="yqv-9r-65K"/>
+                            <constraint firstItem="SSF-NN-maK" firstAttribute="top" secondItem="Mlk-oA-q3O" secondAttribute="top" constant="24" id="yqv-9r-65K"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Mlk-oA-q3O"/>
                     </view>
                     <navigationItem key="navigationItem" id="wZU-sd-3aq">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Kgl-HP-Qua">
-                            <connections>
-                                <action selector="cancelButtonTapped:" destination="hYs-lB-zlh" id="Nmr-sS-YFl"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" image="icon_more" id="r34-uc-n2g"/>
+                        <barButtonItem key="rightBarButtonItem" image="icon_more_nav" id="r34-uc-n2g"/>
                     </navigationItem>
                     <connections>
                         <outlet property="toolbarViewBottomConstraint" destination="my9-eX-Oc3" id="ZJw-QR-mdz"/>
@@ -162,6 +157,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon_more" width="32" height="32"/>
+        <image name="icon_more_nav" width="22" height="22"/>
     </resources>
 </document>
